# hw1-project

./: README.md  build.sh  install.sh  run.sh
envs/: README.md  build.sh  env_android26.sh  install.sh
envs/envs/: env_android27.sh
envs/src/apk/app/src/jni/: service.c
envs/src/service/: Service.cpp  Service.h
envs/src/service/client/: Client.cpp  Client.h
envs/src/service/server/: server.cpp
envs/src/service/test/: test.cpp
src/apk/: Android.mk  AndroidManifest.xml  Application.mk  MainActivity.java  NativeClass.java  com_tcl_tbrowser3_NativeClass.h  com_tcl_tbrowser_NativeClass.h  tbrowser.cpp  tbrowser3.cpp  tos_key_code.h  tos_tbrowser.h
src/apk/app/: build.gradle
src/apk/app/src/jni/: Android.mk  com_example_wenwen1zhang_myapp_NativeClass.h
src/apk/gradle/wrapper/: gradle-wrapper.properties
src/apk/jni/: Android.mk  Application.mk  com_tcl_tbrowser3_NativeClass.h  tbrowser3.cpp  tos_key_code.h  tos_tbrowser.h
src/service/: Binder.h  CMakeList--Service.txt  Makefile.mak  Service.cpp  Service.h
src/service/Client/: Client.cpp  Client.h
src/service/kmodule/kbinder/: CMakeLists.txt  binder.c
src/service/sbinder/: CMakeLists.txt
src/service/sbinder/binder/: IServiceManager.cpp  Parcel.cpp  ProcessState.cpp  binder.cpp
src/service/sbinder/include/binder/: Parcel.h
src/service/sbinder/include/sbinder/: ICallbackList.h  RemoteCallbackList.h  sbinderServ.h
src/service/sbinder/sbinder/: ICallbackList.cpp  RemoteCallbackList.cpp  sbinderServ.cpp
src/service/server/: server.cpp
src/service/test/: test.cpp
(+6 files in other folders)
